@@ -18,6 +18,7 @@
   - fix mortal stack bug. mortal stack is extended to count of PUSH_MORTAL opcode
   - fix array init type bug
   - fix type semantics. Can't assign Class[] to object[]
+  - fix narrowing convertion bug
 0.0369 2018-09-08
   - fix hash key buffer memory bug.
   - rename SPVM::Build to SPVM::Builder
